--- a/templates/admin/security/login.html.twig
+++ b/templates/admin/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/layout/layout_empty_page.html.twig' %}
 
-{% block title %}Log In - RankedChoice{% endblock %}
+{% block title %}Log In - OnlineStore{% endblock %}
 
 {% block body %}
     <div class="row justify-content-center">
