--- a/templates/main/_embed/_footer.html.twig
+++ b/templates/main/_embed/_footer.html.twig
@@ -39,7 +39,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-12 mt-3">
-                    <p class="widget-copyright">Copyright © RankedChoice Team. All Rights Reserved.</p>
+                    <p class="widget-copyright">Copyright © OnlineStore Team. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
