--- a/templates/main/_embed/_menu/_desktop_menu.html.twig
+++ b/templates/main/_embed/_menu/_desktop_menu.html.twig
@@ -4,7 +4,7 @@
     </button>
 
     <a href="{{ path('main_homepage') }}" class="logotype">
-        <img src="{{ asset('build/images/icons/logo_366x79.svg') }}" alt="RankedChoice Logotype">
+        <img src="{{ asset('build/images/icons/logo_366x79.png') }}" alt="OnlineStore Logotype">
     </a>
     <nav class="main-nav">
         <ul class="menu">
