--- a/templates/main/cart/show.html.twig
+++ b/templates/main/cart/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'main/base.html.twig' %}
 
-{% block title %}Your Cart - RankedChoice{% endblock %}
-{% block page_keywords %}Jeans, Ranked Choice Homepage, Jackets{% endblock %}
+{% block title %}Your Cart - OnlineStore{% endblock %}
+{% block page_keywords %}Jeans, Online Store Homepage, Jackets{% endblock %}
 {% block page_description %}User's cart on OnlineShop shop!{% endblock %}
 
 {% block stylesheets %}
