--- a/templates/main/category/show.html.twig
+++ b/templates/main/category/show.html.twig
@@ -1,8 +1,8 @@
 {% extends 'main/base.html.twig' %}
 
-{% block title %}{{ category.title }} - RankedChoice{% endblock %}
-{% block page_keywords %}Jeans, Ranked Choice Homepage, Jackets{% endblock %}
-{% block page_description %}Category page of RankedChoice shop!{% endblock %}
+{% block title %}{{ category.title }} - OnlineStore{% endblock %}
+{% block page_keywords %}Jeans, Online Store Homepage, Jackets{% endblock %}
+{% block page_description %}Category page of OnlineStore shop!{% endblock %}
 
 {% block body %}
     <div class="text-center">
@@ -64,7 +64,7 @@
 
     // function addProductToCart(uuid) {
     //     console.log(uuid, urlSaveProductToCart);
-        
+
     //     // const formData = new FormData();
     //     // formData.append('productId', uuid);
     //     // axios.post(urlSaveProductToCart, formData)
