--- a/templates/main/default/index.html.twig
+++ b/templates/main/default/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'main/base.html.twig' %}
 
-{% block title %}Homepage - RankedChoice{% endblock %}
+{% block title %}Homepage - OnlineStore{% endblock %}
 {% block page_keywords %}Jeans, Jackets{% endblock %}
-{% block page_description %}Main page of RankedChoice shop!{% endblock %}
+{% block page_description %}Main page of OnlineStore shop!{% endblock %}
 
 {% block body %}
     <div class="container-fluid mt-2">
