--- a/templates/main/email/base.html.twig
+++ b/templates/main/email/base.html.twig
@@ -4,7 +4,7 @@
             <columns>
                 <a href="{{ url('main_homepage') }}">
                     <center>
-                        <img src="{{ email.image('@images/icons/logo_366x79.svg') }}" class="logo" alt="Online store">
+                        <img src="{{ email.image('@images/icons/logo_366x79.png') }}" class="logo" alt="Online store">
                     </center>
                 </a>
             </columns>
