--- a/templates/main/product/show.html.twig
+++ b/templates/main/product/show.html.twig
@@ -1,8 +1,8 @@
 {% extends 'main/base.html.twig' %}
 
-{% block title %}{{ product.title }} - RankedChoice{% endblock %}
-{% block page_keywords %}Jeans, Ranked Choice Homepage, Jackets{% endblock %}
-{% block page_description %}Product page of RankedChoice shop!{% endblock %}
+{% block title %}{{ product.title }} - OnlineStore{% endblock %}
+{% block page_keywords %}Jeans, Online Store Homepage, Jackets{% endblock %}
+{% block page_description %}Product page of OnlineStore shop!{% endblock %}
 
 {% block body %}
 
