--- a/templates/main/profile/edit.html.twig
+++ b/templates/main/profile/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'main/base.html.twig' %}
 
-{% block title %}Edit my profile - RankedChoice{% endblock %}
+{% block title %}Edit my profile - OnlineStore{% endblock %}
 
 {% block body %}
     <div class="page-content">
