--- a/templates/main/profile/index.html.twig
+++ b/templates/main/profile/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'main/base.html.twig' %}
 
-{% block title %}My profile - RankedChoice{% endblock %}
+{% block title %}My profile - OnlineStore{% endblock %}
 
 {% block body %}
     <div class="page-content">
@@ -54,4 +54,3 @@
         </div>
     </div>
 {% endblock %}
-
