--- a/templates/main/security/login.html.twig
+++ b/templates/main/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'main/base.html.twig' %}
 
-{% block title %}Log In - RankedChoice{% endblock %}
+{% block title %}Log In - OnlineStore{% endblock %}
 
 {% block body %}
     <div class="page-content pt-4 pb-4">
@@ -58,4 +58,3 @@
         </div>
     </div>
 {% endblock %}
-
