--- a/templates/admin/layout/layout_main.html.twig
+++ b/templates/admin/layout/layout_main.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin/base.html.twig' %}
 
 {% block title %}
-    Admin Panel - {% block title_detailed %} | RankedChoice{% endblock %}
+    Admin Panel - {% block title_detailed %} | OnlineStore{% endblock %}
 {% endblock %}
 
 {% block layout_body %}
@@ -25,7 +25,7 @@
                 <footer class="sticky-footer bg-white">
                     <div class="container my-auto">
                         <div class="copyright text-center my-auto">
-                            <span>Copyright &copy; RankedChoice</span>
+                            <span>Copyright &copy; OnlineStore</span>
                         </div>
                     </div>
                 </footer>
