--- a/templates/main/default/edit_product.html.twig
+++ b/templates/main/default/edit_product.html.twig
@@ -1,8 +1,8 @@
 {% extends 'main/base.html.twig' %}
 
-{% block title %}Homepage - RankedChoice{% endblock %}
+{% block title %}Homepage - OnlineStore{% endblock %}
 {% block page_keywords %}Jeans, Jackets{% endblock %}
-{% block page_description %}Main page of RankedChoice shop!{% endblock %}
+{% block page_description %}Main page of OnlineStore shop!{% endblock %}
 
 {% block body %}
     <div class="container-fluid mt-2">
@@ -13,9 +13,9 @@
                     <div class="form-control">
                         <i class="fa fa-calendar"></i> {{ form_label(form.title) }}
                         {{ form_widget(form.title) }}
-                    
+
                         <small>{{ form_help(form.title) }}</small>
-                    
+
 
                     </div>
                     <div class="form-error text-danger">
