--- a/templates/main/security/registration.html.twig
+++ b/templates/main/security/registration.html.twig
@@ -1,6 +1,6 @@
 {% extends 'main/base.html.twig' %}
 
-{% block title %}Sign Up - RankedChoice{% endblock %}
+{% block title %}Sign Up - OnlineStore{% endblock %}
 
 {% block body %}
     <div class="page-content pt-4 pb-4">
